--- a/main/templates/products/product.html
+++ b/main/templates/products/product.html
@@ -21,7 +21,7 @@ function getCookie(name) {
 }
 
 function buy(buyBoth){
-    var products_id = buyBoth ? "{{ listing.id }},{{ suggested_product.id }}" : "{{ listing.id }}";
+    var products_id = buyBoth ? "{{ product.id }},{{ suggested_product.id }}" : "{{ product.id }}";
     var csrf_token = getCookie("csrftoken");
     var data =JSON.stringify({"products": products_id});
     var settings = {
@@ -53,9 +53,9 @@ function get_suggested_products(product_id) {
     <div class="container">
       <div class="row text-center">
         <div class="col-md-12">
-          <h1 class="display-4">{{ listing.name }}</h1>
+          <h1 class="display-4">{{ product.name }}</h1>
           <p class="lead">
-            <i class="fab fa-reddit-alien"></i> {{ listing.type }}, {{ listing.sub_type }}</p>
+            <i class="fab fa-reddit-alien"></i> {{ product.category }}</p>
         </div>
       </div>
     </div>
@@ -70,7 +70,7 @@ function get_suggested_products(product_id) {
             <a href="{% url 'index' %}">Home</a>
           </li>
           <li class="breadcrumb-item">
-            <a href="{% url 'listings' %}">Listings</a>
+            <a href="{% url 'products' %}">Listings</a>
           </li>
           <li class="breadcrumb-item active">{{ listing.name }}</li>
         </ol>
@@ -81,55 +81,28 @@ function get_suggested_products(product_id) {
   <!-- Listing -->
   <section id="listing" class="py-4">
     <div class="container">
-      <a href="{% url 'listings' %}" class="btn btn-light mb-4">Back To Listings</a>
+      <a href="{% url 'products' %}" class="btn btn-light mb-4">Back To Listings</a>
       <div class="row">
         <div class="col-md-7">
           <!-- Home Main Image -->
-          <img src="{{ listing.photo_main.url }}" alt="" class="img-main img-fluid mb-3"><hr>
+          <img src="{{ product.photo_main.url }}" alt="" class="img-main img-fluid mb-3"><hr>
           <!-- Thumbnails -->
           <div class="row mb-5 thumbs">
-              {% if listing.photo_1 %}
+              {% if product.photo_1 %}
             <div class="col-md-2">
-              <a href="{{ listing.photo_1.url }}" data-lightbox="home-images">
-                <img src="{{ listing.photo_1.url }}" alt="" class="img-fluid">
+              <a href="{{ product.photo_1.url }}" data-lightbox="home-images">
+                <img src="{{ product.photo_1.url }}" alt="" class="img-fluid">
               </a>
             </div>
               {% endif %}
-              {% if listing.photo_2 %}
+              {% if product.photo_2 %}
             <div class="col-md-2">
-              <a href="{{ listing.photo_2.url }}" data-lightbox="home-images">
-                <img src="{{ listing.photo_2.url }}" alt="" class="img-fluid">
+              <a href="{{ product.photo_2.url }}" data-lightbox="home-images">
+                <img src="{{ product.photo_2.url }}" alt="" class="img-fluid">
               </a>
             </div>
               {% endif %}
-              {% if listing.photo_3 %}
-            <div class="col-md-2">
-              <a href="{{ listing.photo_3.url }}" data-lightbox="home-images">
-                <img src="{{ listing.photo_3.url }}" alt="" class="img-fluid">
-              </a>
-            </div>
-              {% endif %}
-              {% if listing.photo_4 %}
-            <div class="col-md-2">
-              <a href="{{ listing.photo_4.url }}" data-lightbox="home-images">
-                <img src="{{ listing.photo_4.url }}" alt="" class="img-fluid">
-              </a>
-            </div>
-              {% endif %}
-              {% if listing.photo_5 %}
-            <div class="col-md-2">
-              <a href="{{ listing.photo_5.url }}" data-lightbox="home-images">
-                <img src="{{ listing.photo_5.url }}" alt="" class="img-fluid">
-              </a>
-            </div>
-              {% endif %}
-              {% if listing.photo_6 %}
-            <div class="col-md-2">
-              <a href="{{ listing.photo_6.url }}" data-lightbox="home-images">
-                <img src="{{ listing.photo_6.url }}" alt="" class="img-fluid">
-              </a>
-            </div>
-              {% endif %}
+              
           </div>
           <hr>
           <!-- Fields -->
@@ -138,7 +111,7 @@ function get_suggested_products(product_id) {
               <ul class="list-group list-group-flush">
                 <li class="list-group-item text-secondary">
                   <i class="fas fa-money-bill-alt"></i> Asking Price:
-                  <span class="float-right">Rs.{{ listing.price | intcomma }}</span>
+                  <span class="float-right">Rs.{{ product.price | intcomma }}</span>
                 </li>
                 
               </ul>
@@ -149,9 +122,10 @@ function get_suggested_products(product_id) {
           <!-- Description -->
           <div class="row mb-5">
             <div class="col-md-12">
-                {{ listing.description }}
+                {{ product.specfication }}
             </div>
           </div>
+          <!--
           <p>Review:</p>
           <form action="{% url 'review_system' %}" method="POST">
             {% csrf_token %}
@@ -161,17 +135,16 @@ function get_suggested_products(product_id) {
               </div>
               <br><div class="col-md-4"><input type="submit" class="btn btn-block btn-secondary"></div>
             </div>
-          </form>
+          </form>-->
         </div>
 
         <div class="col-md-1"></div>
 
         <div class="col-md-3">
           <div class="card mb-3">
-            <img class="card-img-top" src="{{ listing.seller.photo.url }}" alt="">
             <div class="card-body">
               <h5 class="card-title">Product seller</h5>
-              <h6 class="text-secondary">{{ listing.seller }}</h6>
+              <h6 class="text-secondary">{{ product.seller }}</h6>
             </div>
           </div>
           {% if user.id == None %}
