--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -29,15 +29,14 @@
 <link href="https://fonts.googleapis.com/css2?family=Rokkitt&family=Poppins:wght@200;400&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
 
+
 <!-- Local js and CSS files -->
-<link rel="stylesheet" type="text/css" href="static/js/slick/slick.css">
-<link rel="stylesheet" type="text/css" href="static/css/index/util.css">
-<link rel="stylesheet" type="text/css" href="static/css/index/main.css">
+<link rel="stylesheet" type="text/css" href="{% static 'js/slick/slick.css' %}">
+<link rel="stylesheet" type="text/css" href="{% static 'css/index/util.css' %}">
+<link rel="stylesheet" type="text/css" href="{% static 'css/index/main.css' %}">
 <link rel="stylesheet" type="text/css" href="{% static 'css/accounts.css' %}">
 <link rel="stylesheet" type="text/css" href="{% static 'css/home.css' %}">
-<style>
-  
-</style>
+
 
 </head>
 <body>
