--- a/main/templates/products/view_products.html
+++ b/main/templates/products/view_products.html
@@ -113,4 +113,21 @@
       </div>
     </div>
   </section>
+
+
+  <script type="text/javascript" src="static/js/slick/slick.min.js"></script>
+  <script type="text/javascript" src="static/js/slick-custom.js"></script>
+  
+  <script type="text/javascript">
+    $('.block2-btn-addcart').each(function(){
+      var nameProduct = $(this).parent().parent().parent().find('.block2-name').html();
+      $(this).on('click', function(){
+        swal(nameProduct, "is added to cart !", "success");
+      });
+    });
+  </script>
+  
+  <!--===============================================================================================-->
+  <script src="static/js/main.js"></script>
+
 {% endblock %}
