--- a/main/static/css/index/main.css
+++ b/main/static/css/index/main.css
@@ -56,10 +56,10 @@ ul, li {
 
 
 /* ------------------------------------ */
-input {
+/* input {
 	outline: none;
 	border: none !important;
-}
+} */
 
 textarea {
   outline: none;
