--- a/main/static/css/index/main.css
+++ b/main/static/css/index/main.css
@@ -56,10 +56,10 @@ ul, li {
 
 
 /* ------------------------------------ */
-input {
+/* input {
 	outline: none;
 	border: none !important;
-}
+} */
 
 textarea {
   outline: none;
@@ -333,4 +333,31 @@ iframe {
   -ms-transform: scale(1);
   -o-transform: scale(1);
   transform: scale(1);
+}
+
+
+.pagination {
+  margin-right: -6px;
+  margin-left: -6px;
+}
+
+.item-pagination {
+  font-family: Montserrat-Regular;
+  font-size: 13px;
+  color: #808080;
+  width: 36px;
+  height: 36px;
+  border-radius: 50%;
+  border: 1px solid #eeeeee;
+  margin: 6px;
+}
+
+.item-pagination:hover {
+  background-color: #222222;
+  color: white;
+}
+
+.active-pagination {
+  background-color: #222222;
+  color: white;
 }
