--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -67,7 +67,7 @@
             class="nav-item"
           {% endif %}
           >
-            <a class="nav-link" href="{% url 'index' %}">Sellers</a>
+            <a class="nav-link" href="{% url 'cart_detail' %}">Cart</a>
           </li>
       </ul>
       <ul class="navbar-nav ml-auto">
