--- a/main/templates/products/search.html
+++ b/main/templates/products/search.html
@@ -14,21 +14,33 @@
 
         {% if products %}
           {% for product in products %}
-          <div class="col-md-6 col-lg-4 mb-4">
-            <div class="block2-img wrap-pic-w of-hidden pos-relative block2-label new">
-              <img src="{{ product.photo_main.url }}" alt="IMG-PRODUCT" height="250" width="200">
-        
-              <div class="block2-overlay trans-0-4">
-                <a href="#" class="block2-btn-addwishlist hov-pointer trans-0-4 index_a">
-                  <i class="icon-wishlist icon_heart_alt" aria-hidden="true"></i>
-                  <i class="icon-wishlist icon_heart dis-none" aria-hidden="true"></i>
-                </a>
-        
-                <div class="block2-btn-addcart w-size1 trans-0-4">
-                  <!-- Button -->
-                  <button class="flex-c-m size1 bg4 bo-rad-23 hov1 s-text1 trans-0-4">
-                    Add to Cart
-                  </button>
+            <div class="col-md-6 col-lg-4 mb-4">
+              <div class="card listing-preview">
+                <img class="card-img-top" src="{{ product.image.url }}" height="350" alt="">
+                <div class="card-img-overlay">
+                  <h2>
+                    <span class="badge badge-secondary text-white">₹{{ product.price | intcomma }}</span>
+                  </h2>
+                </div>
+                <div class="card-body">
+                  <div class="listing-heading text-center">
+                    <h4 class="text-primary">{{ product.name }}</h4>
+                    <p>
+                      <i class="fab fa-reddit-alien text-secondary"></i> {{ product.category }}</p>
+                  </div>
+                  <hr>
+                  
+                  <hr>
+                  <div class="row py-2 text-secondary">
+                    <div class="col-12">
+                      <i class="fas fa-registered"></i> Brand: {{ product.brand }}</div>
+                  </div>
+                  <div class="row text-secondary pb-2">
+                    <div class="col-6">
+                      <i class="fas fa-clock"></i> {{ product.list_date | timesince }}</div>
+                  </div>
+                  <hr>
+                  <a href="{% url 'product' product.id %}" class="btn btn-primary btn-block">More Info</a>
                 </div>
               </div>
             </div>
