--- a/main/templates/home/index.html
+++ b/main/templates/home/index.html
@@ -50,7 +50,7 @@
 
 							<button class="flex-c-m size1 bg4 bo-rad-23 hov1 s-text1 trans-0-4">
 								<!-- Add to Cart -->
-								<a href="{% url 'cart_add' product.id %}">Add To Cart</a>
+								<a href="{% url 'cart_add' product.id %}" style="color: white;">Add To Cart</a>
 							</button>
 						</div>
 					</div>
