--- a/main/templates/products/view_products.html
+++ b/main/templates/products/view_products.html
@@ -49,7 +49,7 @@
                   <div class="block2-btn-addcart w-size1 trans-0-4">
                     <!-- Button -->
                     <button class="flex-c-m size1 bg4 bo-rad-23 hov1 s-text1 trans-0-4">
-                      Add to Cart
+                      <a href="{% url 'cart_add' product.id %}" style="color:white">Add To Cart</a>
                     </button>
                   </div>
                 </div>
