--- a/main/templates/products/product.html
+++ b/main/templates/products/product.html
@@ -173,7 +173,7 @@ function get_suggested_products(product_id) {
             </div>
           </div>
             <hr>
-            <button class="btn btn-block btn-secondary" onclick="buy(true)"><a href="{% url 'cart_add' product.id %}" style="color:white">Buy Both at ₹{{ product.price|add:suggested_product.price }}</button>
+            <button class="btn btn-block btn-secondary" onclick="buy(true)"><a href="{% url 'cart_add' suggested_product.id %}" style="color:white">Buy Both at ₹{{ product.price|add:suggested_product.price }}</button>
             
           <hr>
           {% endif %}
